erDiagram
    TENANT_USERS {
        uuid_v7 id PK
        string employee_id UK
        string full_name
        string email UK
        string password_hash
        string role "BANK_ADMIN / COMPLIANCE_OFFICER"
        boolean is_first_login
        int failed_login_attempts
        boolean is_locked
        timestamp locked_at
        timestamp last_login_at
        string last_login_ip
        uuid_v7 sys_created_by FK
        boolean sys_is_deleted
        timestamp sys_deleted_at
        timestamp sys_created_at
        timestamp sys_updated_at
    }
    USER_SESSIONS {
        uuid_v7 id PK
        uuid_v7 user_id FK
        string jwt_jti UK "JWT ID for revocation"
        string ip_address
        string user_agent
        timestamp expires_at
        boolean is_revoked
        timestamp revoked_at
        timestamp sys_created_at
    }
    TENANT_SCENARIOS {
        uuid_v7 id PK
        uuid_v7 global_scenario_id "Ref COMMON_SCHEMA.GLOBAL_SCENARIOS"
        string status "ACTIVE / PAUSED"
        uuid_v7 sys_activated_by FK
        timestamp sys_created_at
        timestamp sys_updated_at
    }
    TENANT_SCENARIO_RULES {
        uuid_v7 id PK
        uuid_v7 tenant_scenario_id FK
        uuid_v7 global_rule_id "Ref COMMON_SCHEMA.GLOBAL_RULES"
        boolean is_active "Granular per-rule toggle within scenario"
        uuid_v7 toggled_by FK
        timestamp sys_created_at
        timestamp sys_updated_at
    }
    TENANT_RULES {
        uuid_v7 id PK
        uuid_v7 global_rule_id "Ref COMMON_SCHEMA.GLOBAL_RULES"
        string rule_code UK "e.g. BA-STR-001"
        string rule_name "Bank custom name"
        uuid_v7 sys_created_by FK
        boolean sys_is_deleted
        timestamp sys_deleted_at
        timestamp sys_created_at
        timestamp sys_updated_at
    }
    TENANT_RULE_VERSIONS {
        uuid_v7 id PK
        uuid_v7 rule_id FK
        int version_number
        string change_type "THRESHOLD_UPDATE / SEVERITY_CHANGE / VELOCITY_CHANGE"
        string status "ACTIVE / PAUSED / ARCHIVED"
        string severity "HIGH / MEDIUM / LOW"
        int base_risk_score
        string change_reason "Mandatory for audit"
        boolean is_current_version
        timestamp effective_from
        timestamp effective_to
        uuid_v7 sys_changed_by FK
        timestamp sys_created_at
    }
    TENANT_RULE_THRESHOLDS {
        uuid_v7 id PK
        uuid_v7 rule_version_id FK
        uuid_v7 global_condition_id "Ref COMMON_SCHEMA.GLOBAL_RULE_CONDITIONS"
        string override_value "e.g. 15000"
        string override_lookback_period "e.g. 7d"
        string override_aggregation_function "e.g. COUNT"
    }
    TENANT_AUDIT_LOG {
        uuid_v7 id PK
        uuid_v7 actor_id FK
        string action_category "USER_MGMT / RULE_MGMT / CASE_WORK"
        string action_performed
        string target_entity_type "USER / RULE / CASE / STR_FILING"
        uuid_v7 target_entity_id
        jsonb prev_state
        jsonb next_state
        string ip_address
        timestamp sys_created_at "Immutable"
    }
    TENANT_USERS ||--o{ USER_SESSIONS : "has"
    TENANT_USERS ||--o{ TENANT_SCENARIOS : "activates"
    TENANT_SCENARIOS ||--o{ TENANT_SCENARIO_RULES : "granular rule toggles"
    TENANT_USERS ||--o{ TENANT_SCENARIO_RULES : "toggles"
    TENANT_USERS ||--o{ TENANT_RULES : "manages"
    TENANT_USERS ||--o{ TENANT_RULE_VERSIONS : "versions"
    TENANT_USERS ||--o{ TENANT_AUDIT_LOG : "performs"
    TENANT_RULES ||--o{ TENANT_RULE_VERSIONS : "historical log"
    TENANT_RULE_VERSIONS ||--o{ TENANT_RULE_THRESHOLDS : "threshold overrides"